--- a/natour/index.html
+++ b/natour/index.html
@@ -21,6 +21,7 @@
                     <span class="heading-primary-main">Outdoors</span>
                     <span class="heading-primary-sub">is where life happen</span>
                 </h1>
+                <a href="#" class="btn btn-white btn-animated">Discover Our Tours</a>
             </div>
         </header>
     </body>
